fix min font size for input on mobile

--- a/app/components/newsletter-signup/index.module.css
+++ b/app/components/newsletter-signup/index.module.css
@@ -44,7 +44,8 @@
   .container {
     align-items: center;
   }
-  .form {
+  .form button,
+  .form input {
     font-size: 16px;  /* prevent iOS auto zoom */
   }
   
